Changed the inappropriate Boolean constructor based on Oracle recommendation. Fixed Javadoc recommendation. Removed unused namespaces